2002-10-27    <karl@gnu.org>

	* configure.ac (AM_INIT_AUTOMAKE): add dist-bzip2 option.

2002-10-26    <karl@gnu.org>

	* 2002-10-24  Werner Lemberg  <wl@gnu.org>
	Fix html font tags, i.e., make the output similar to
	texinfo.tex.  The main idea is to avoid nested font tags.

	* makeinfo/html.c (push_tag, pop_tag): New functions.
	(insert_html_tag): Use them.
	Don't emit more than a single font attribute.

	* makeinfo/html.h (HSTACK): New structure.

	* makeinfo/defun.c: Include cmds.h and html.h.
	(process_defun_args): Don't apply <i>...</i> to parentheses
	and brackets.
	(defun_internal): Use insert_html_tag for emitting font tags.

	* makeinfo/cmds.c (cm_url): Use insert_html_tag for emitting
	font tag.
	(cm_r): Simplify.

2002-10-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* util/texi2dvi: Preserve empty components when expansing
	TEXINPUTS and INDEXSTYLE.

2002-10-24    <karl@gnu.org>

	* doc/info-stnd.texi: missing period.

	* m4/{check-decl.m4,mkstemp.m4,prereq.m4}: new files from gnulib.
	* lib/mkstemp.c, lib/tempname.c: likewise.
	* aclocal.m4, configure.ac: support for mkstemp instead of mktemp.
	* util/texindex.c: use mkstemp instead of mktemp.

        2002-10-24  Alexandre Duret-Lutz  <adl@gnu.org>
	* util/texi2dvi: Turn relative entries $TEXINPUTS and $INDEXSTYLE
	into absolute paths.  (Allows --clean to work with relative dirs
	in TEXINPUTS, etc.)

	* doc/texinfo.tex: update \texinfoversion timestamp.

2002-10-22    <karl@gnu.org>

	2002-10-16  Werner Lemberg  <wl@gnu.org>

	* texinfo.tex (\appendixbox): New macro to compute a
	fixed-width box for the appendix entry in the TOC.
	(\appendixzzz, \appendixentry): Use it.

	(\shortconttt): New font.
	(\summarycontents): Use it to set the font size of the \tt
	font properly.

	(\authortt): New macro.
	(\authorfont): Use it to provide a proper font size for
	@email used within @author.

2002-10-21    <karl@gnu.org>

	* automake 1.7.1.

2002-10-18    <karl@gnu.org>
